# advent-of-code-2023

./: Cargo.toml  dhat-heap.json  output.txt
day-00/: Cargo.toml
day-00/benches/: benchmark.rs
day-01/src/: main.rs
day-02/src/: main.rs
day-03/src/: main.rs
day-04/src/: main.rs
day-05/: Cargo.toml
day-05/src/: main.rs
day-06/: Cargo.toml
day-06/src/: main.rs
day-07/: Cargo.toml
day-07/benches/: benchmark.rs
day-07/src/: part1.rs  part2.rs
day-08/: Cargo.toml
day-08/benches/: benchmark.rs
day-08/src/: part1.rs  part2.rs
day-09/: Cargo.toml
day-09/benches/: benchmark.rs
day-09/src/: part1.rs  part2.rs
day-10/: Cargo.toml
day-10/benches/: benchmark.rs
day-10/src/: part1.rs  part2.rs
day-11/: Cargo.toml
day-11/benches/: benchmark.rs
day-11/src/: part1.rs  part2.rs
day-12/: Cargo.toml
day-12/benches/: benchmark.rs
day-12/src/: part1.rs  part2.rs
day-13/: Cargo.toml  test-input2.txt
day-13/benches/: benchmark.rs
day-13/src/: part1.rs  part2.rs
day-14/: Cargo.toml  test-input2.txt  test-input3.txt
day-14/benches/: benchmark.rs
day-14/src/: part1.rs  part2.rs
day-15/: Cargo.toml
day-15/benches/: benchmark.rs
day-15/src/: part1.rs  part2.rs
day-16/: Cargo.toml
day-16/benches/: benchmark.rs
day-16/src/: part1.rs  part2.rs
day-18/: Cargo.toml
day-18/benches/: benchmark.rs
day-18/src/: part1.rs  part2.rs
day-19/: Cargo.toml
day-19/benches/: benchmark.rs
day-19/src/: part1.rs  part2.rs
day-20/: Cargo.toml
day-20/benches/: benchmark.rs
day-20/src/: part1.rs  part2.rs
