[package]
name = "day-12"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = { workspace = true }
nom = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
miette = { workspace = true }
thiserror = { workspace = true }
dhat = { workspace = true }
regex = { workspace = true }
rayon = { workspace = true }
memoize = { workspace = true }

[dev-dependencies]
divan = { workspace = true }
env_logger = { workspace = true }
test-log = { workspace = true }
rstest = { workspace = true }

[[bench]]
name = "day-00"
path = "benches/benchmark.rs"
harness = false

[features]
dhat-heap = []
